# CatMerge-Stoichita-Ioana-Anamaria

./: Boundary.cpp  Boundary.h  CMakeLists.txt  Cat.cpp  Cat.h  CatFactory.cpp  CatFactory.h  CatHoratiu.cpp  CatHoratiu.h  CatPandispan.cpp  CatPandispan.h  CatPedro.cpp  CatPedro.h  Combination.cpp  Combination.h  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  README.md  Score.cpp  Score.h  TemplateClass.cpp  TemplateClass.h  main.cpp
.github/workflows/: cmake.yml
scripts/: run_cppcheck.sh
